--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
   var serv;
   var servi;
   var char;
+  console.log("Scanning for devices");
   navigator.bluetooth.requestDevice({
     filters: [{ services: ['battery_service'],
       }]
