--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
     </paper-toolbar>
     <div class="container">
       <div class="icon-container">
-        <iron-icon id="battery-level" class="my-icon" icon="device:battery-std"></iron-icon>
+        <iron-icon class="my-icon" icon="device:battery-std"></iron-icon>
         <svg class="my-icon" viewBox="0 0 24 24">
-          <rect x="0" y="2" height="20" class="top-icon"/>
+          <rect id="battery-level" x="0" y="2" height="20" class="top-icon"/>
         </svg>
       </div>
     </div>
