--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
      position: absolute;
      bottom: 20px;
      right: 20px;
+     transition: all 1;
    }
    .my-icon {
      position: absolute;
